--- a/index.html
+++ b/index.html
@@ -80,12 +80,14 @@
             z-index: 2;
         }
     
-        .arrow.left {
-          left: -30px;
-        }
-    
-        .arrow.right {
-          right: -30px;
+.arrow.left {
+  left: calc(-1.8rem - 10px);
+}
+
+.arrow.right {
+  right: calc(-1.8rem - 10px); 
+}
+
         }
       </style>
     </head>
