--- a/index.html
+++ b/index.html
@@ -67,18 +67,21 @@
           box-shadow: 2px 2px 10px #555;
         }
     
-        .arrow {
-          position: absolute;
-          top: 50%;
-          transform: translateY(-50%);
-          font-size: 2rem;
-          background: none;
-          border: none;
-          cursor: pointer;
-          user-select: none;
-          color: #5a3e1b;
-            z-index: 2;
-        }
+.arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 2rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+  user-select: none;
+  color: #5a3e1b;
+  z-index: 2;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+  font-weight: bold;                        
+}
+
     
 .arrow.left {
   left: calc(-1.8rem - 10px);
