--- a/index.html
+++ b/index.html
@@ -84,12 +84,15 @@
 
     
 .arrow.left {
-  left: calc(-1.8rem - 10px);
+  left: 0;
+  transform: translate(-100%, -50%);
 }
 
 .arrow.right {
-  right: calc(-1.8rem - 10px); 
+  right: 0;
+  transform: translate(100%, -50%); 
 }
+
 
         }
       </style>
