--- a/index.html
+++ b/index.html
@@ -82,14 +82,15 @@
 }
 
 .arrow.left {
-  left: 0;
-  transform: translate(-100%, -50%);
+  left: -30px;
+  transform: translateY(-50%);
 }
 
 .arrow.right {
-  right: 0;
-  transform: translate(100%, -50%);
+  right: -30px;
+  transform: translateY(-50%);
 }
+
 
 
         }
