--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   top: 50%;
   transform: translateY(-50%);
   font-size: 2rem;
-  background: none;
+  background: white;
   border: none;
   cursor: pointer;
   user-select: none;
