--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       text-align: center;
       word-break: break-word;
       max-width: 90vw;
-      font-size: 1.8rem;
+      font-size: 1.2rem;
     }
 
     .album {
@@ -144,7 +144,7 @@
 <body>
   <div class="page">
     <h1>a day at the beach</h1>
-    <h1>photos [mostly] by zizi.</h1>
+    <h1>photos (mostly) by zizi.</h1>
 
     <div class="album">
       <button class="arrow left" onclick="prevPhoto()">‹</button>
