--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@
 </head>
 <body>
   <div class="page">
-    <h1>a day at the beach</h1>
-    <h1>photos (mostly) by zizi.</h1>
+<h1>a day at the beach</h1>
+<h1 class="subtitle">photos ✨mostly✨ by zizi.</h1>
+
 
     <div class="album">
       <button class="arrow left" onclick="prevPhoto()">‹</button>
